# kiteML

./: .gitignore  404.html  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORTED_MODELS.md  ci_logs.txt  freeze.txt  index.html  install_logs.txt  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  smoke_test_output.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  publish.yml  release.yml  test.yml  test_install.yml
api/core/: index.html
api/deployment/: index.html
api/evaluation/: index.html
api/intelligence/: index.html
api/orchestration/: index.html
api/pipeline/: index.html
api/prediction/: index.html
api/preprocessing/: index.html
api/training/: index.html
api/validation/: index.html
architecture/diagrams/: index.html
architecture/epic1/: index.html
architecture/epic2/: index.html
architecture/epic3/: index.html
architecture/epic4/: index.html
architecture/epic5/: index.html
architecture/kml_format/: index.html
architecture/overview/: index.html
benchmarks/: benchmark_runner.py
brand/: colors.md  logo-usage.md  typography.md
community/: CONTRIBUTING.md  SECURITY.md
community/code_of_conduct/: index.html
community/contributing/: index.html
community/security/: index.html
developer_experience/: index.html
diagnostics_guide/: index.html
docs/: developer_experience.md  diagnostics_guide.md  error_catalog.md  faq.md  getting_started.md  index.md  suggestions_guide.md  usage.md  warning_catalog.md
docs-spec/: architecture-summary.md  documentation-roadmap.md  module-index.md  public-api.md  style-guide.md  terminology.md  version-history.md
docs/api/: core.md  deployment.md  evaluation.md  intelligence.md  orchestration.md  pipeline.md  prediction.md  preprocessing.md  training.md  validation.md
docs/architecture/: diagrams.md  epic1.md  epic2.md  epic3.md  epic4.md  epic5.md  kml_format.md  overview.md
docs/community/: code_of_conduct.md  contributing.md  security.md
docs/getting-started/: first-model.md  installation.md  quickstart.md
docs/getting_started/: concepts.md  index.md  installation.md  quickstart_cli.md  quickstart_python.md
docs/tutorials/: churn_classification.md  deployment.ipynb  multiclass.ipynb
docs/user-guide/: dataset-analysis.md  deployment.md  evaluation.md  feature-engineering.md  model-selection.md  optimization.md  prediction.md  preprocessing.md  training.md  validation.md
error_catalog/: index.html
examples/: 01_quickstart_classification.py  02_house_price_regression.py  03_pipeline_serialization.py  advanced_example.py  basic_example.py
examples/customer_churn/: index.html
examples/house_prices/: index.html  main.py
examples/iris/: index.html  main.py
examples/titanic/: index.html  main.py
faq/: index.html
getting-started/first-model/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
getting_started/: index.html
getting_started/concepts/: index.html
getting_started/installation/: index.html
getting_started/quickstart_cli/: index.html
getting_started/quickstart_python/: index.html
kiteml/: __init__.py  cli.py  config.py  core.py  py.typed
kiteml/cli/: main.py  parser.py
kiteml/deployment/: __init__.py  adapters.py  api_generator.py  batch_inference.py  builder.py  checksum.py  context.py  descriptor.py  docker_export.py  engine.py  environment_capture.py  fastapi.py  inference_guardrails.py  joblib.py  loader.py  manifest.py  model_server.py  onnx_export.py  packager.py  packaging.py  pickle.py  realtime_inference.py  report.py  serialization.py  validator.py
kiteml/evaluation/: __init__.py  benchmark.py  classification.py  composite.py  context.py  diagnostics.py  engine.py  metrics.py  regression.py  report.py
kiteml/exceptions/: __init__.py  base.py  catalog.py  cli.py  codes.py  configuration.py  context.py  dataset.py  deployment.py  formatter.py  lookup.py  metadata.py  prediction.py  preprocessing.py  registry.py  renderer.py  schema.py  styles.py  target.py  templates.py  themes.py  training.py  utils.py  validation.py
kiteml/experiments/: __init__.py  comparison.py  metadata_store.py  reproducibility.py  run_manager.py  tracker.py
kiteml/feature_engineering/: __init__.py  blueprint.py  engine.py  importance_predictor.py  planner.py  providers.py  rules.py  strategy.py
kiteml/feature_selection/: __init__.py  blueprint.py  engine.py  planner.py  rules.py  selectors.py  strategy.py  voting.py
kiteml/governance/: __init__.py  audit.py  lineage.py  signatures.py  versioning.py
kiteml/integrations/: mlflow.py  wandb.py
kiteml/intelligence/: __init__.py  cardinality_analyzer.py  column_analyzer.py  correlation_analyzer.py  data_profiler.py  datetime_detector.py  explainability.py  feature_recommender.py  imbalance_detector.py  leakage_detector.py  memory_optimizer.py  outlier_detector.py  problem_inference.py  quality_analyzer.py  recommendations.py  schema_inference.py  target_detection.py  text_detector.py
kiteml/ml/: __init__.py  context.py  events.py  hooks.py  loader.py  metrics.py  orchestrator.py  report.py  result.py  workflow_graph.py
kiteml/models/: __init__.py  registry.py  (+3 more)
requirements/: base.txt  dev.txt  docs.txt  optional.txt
scripts/: _patch_prints.py  build_docs.py  generate_brand_assets.py  release.py  smoke_test.py  verify_install.py
search/: search_index.json
suggestions_guide/: index.html
tests/: test_cli.py  test_core.py  test_improvements.py  test_phase1.py  test_phase2.py  test_phase3.py  test_preprocessing.py
tutorials/: classification.ipynb  regression.ipynb
usage/: index.html
warning_catalog/: index.html
(+388 files in other folders)
