# ──────────────────────────────────────────────────────────────────────
#  KiteML — setup.cfg (minimal fallback)
#  Primary configuration is in pyproject.toml
# ──────────────────────────────────────────────────────────────────────

[metadata]
name = kiteml
version = attr: kiteml.__version__
description = Train production-grade ML models with a single line of code.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
include = kiteml*
exclude =
    tests*
    benchmarks*
    examples*
    docs*

[options.entry_points]
console_scripts =
    kiteml = kiteml.cli.main:main

[bdist_wheel]
universal = 0
